Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/Coaching_Insight__c.object-meta.xml
<CustomObject>
    <description>Unified persistence for AI agent coaching and sentiment evaluations across Voice, Chat, and Case channels (Coaching Intelligence v2).</description>
    <label>Coaching Insight</label>
    <nameField>
        <displayFormat>CI-{00000000}</displayFormat>
        <label>Coaching Insight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>