Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>The agent whose performance was evaluated.</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Coaching Insights</relationshipLabel>
    <relationshipName>Coaching_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>