Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Analysis_Type__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Type__c</fullName>
    <description>Whether the evaluation ran in real time at close or as a historical re-analysis.</description>
    <label>Analysis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real-time</fullName>
                <default>true</default>
                <label>Real-time</label>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>