Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Category_Scores__c.field-meta.xml
<CustomField>
    <fullName>Category_Scores__c</fullName>
    <description>Structured JSON of the per-category rubric assessments for future per-category trending.</description>
    <label>Category Scores (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>