Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error detail captured when Status is Failed.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>