Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <description>End-to-end analysis latency in milliseconds.</description>
    <label>Latency (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>