Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The LLM model that produced this evaluation.</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>