Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Performance_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Performance_Evaluation__c</fullName>
    <description>Narrative coaching evaluation across the rubric categories plus overall summary.</description>
    <label>Performance Evaluation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>