Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <description>Overall agent performance score (0-10).</description>
    <label>Performance Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>