Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <description>Identifier/label of the prompt template version used.</description>
    <label>Prompt Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>