Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <description>Source Case record (Case channel only).</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Coaching Insights</relationshipLabel>
    <relationshipName>Coaching_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>