Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Id of the source record this evaluation came from (Voice Call, Messaging Session, Case, or any future channel). Channel-agnostic so the object installs in any org.</description>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>