Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Related_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type__c</fullName>
    <description>API name of the source object for Related Record Id (e.g. VoiceCall, MessagingSession, Case).</description>
    <label>Related Record Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>