Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Sentiment_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Narrative__c</fullName>
    <description>Explanation supporting the sentiment rating.</description>
    <label>Sentiment Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>