Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/fields/Sentiment_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Rating__c</fullName>
    <description>Overall customer sentiment for the interaction.</description>
    <label>Sentiment Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>