Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Agent__c</columns>
    <columns>Performance_Rating__c</columns>
    <columns>Sentiment_Rating__c</columns>
    <columns>Analysis_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>